2007-11-22  Johan Dahlin  <johan@gnome.org>

	* examples/list/stockicon.py (Fruit.__init__):
	Add an example of this.

	* kiwi/ui/objectlist.py (Column): Add a new property
	column which references to another column to be able to
	pack two cell renderers into the same column

2007-11-20  Johan Dahlin  <johan@gnome.org>

	* kiwi/ui/objectlist.py: Only call column.set_expander_column
	once, and on the right instance. Found by George.

2007-11-13  Ali Afshar <aafshar@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/db/stormintegration.py: 
	Add support for Storm in our DB API,

	* examples/search_storm.py: add an example

	Fixes for #3408

2007-11-13  Johan Dahlin  <johan@gnome.org>

	* po/it.po: Add italian translation, fixes #3582 
	(Sandro Bonazzola)

=== 1.9.19 ===
2007-11-06 Fabio Morbec <fabio@async.com.br>
	* NEWS:
	* debian/changelog:
	* doc/howto.tex:
	* doc/release-checklist.txt:
	* kiwi/__version__.py
	* kiwi.spec
	Release 1.9.19

2007-11-04  Johan Dahlin  <johan@gnome.org>

	* kiwi/ui/entry.py: catch NameError instead of AttributeError,
	fixes gnome bug #479510 (Richard Hult)

2007-10-31  Mauricio Vieira  <mauricio.vieira@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* AUTHORS (Maintainers): Add Mauricio

	* kiwi/ui/gazpacholoader.py:
	* kiwi/ui/widgets/scale.py:
	* tests/test_Scale.py:
	* tests/test_proxy.py:
	* tests/test_utils.py:
	Add support for Proxy scale widget, fixes #3578

2007-10-04  Fabio Morbec  <fabio@async.com.br>

	reviewed by: Christian Reis  <kiko@async.com.br>

	* kiwi/ui/objectlist.py (SummaryLabel.update_total): An error occur
	in SummaryLabel when update_total try to sum Decimal with None.
	Fixes #3557

2007-09-14  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/combo.py (_EasyComboBoxHelper.get_selected): Return 
	None instead of raising AssertionError when nothing has been 
	inserted yet.

=== 1.9.18 ===
2007-09-11 Fabio Morbec <fabio@async.com.br>
	* NEWS:
	* debian/changelog: