@@ -20,6 +20,7 @@ Contributors (Kiwi2):
     Gustavo Sverzut Barbieri <barbieri@gmail.com>
     Gustavo Carneiro <gjc@inescporto.pt>
     Dave Cook <dave@davidcook.org>
+    Brad Crittenden <bac@spoetzl.net>
     Daniel Saran R. da Cunha <daniel@async.com.br>
     Ronaldo Maia <romaia@async.com.br>
     Evandro Vale Miquelito <evandro@async.com.br>
